notification-engine/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <description>This object stores the individual notification. The notification can be linked to a group. If linked to a group, the notifications are batched together, and the Title and body are taken from the group.</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>NOTIF-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>