notification-engine/main/default/objects/Notification__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Stores error message for notification if any</description>
    <inlineHelpText>Error message</inlineHelpText>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>