notification-engine/main/default/objects/Notification__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The group with which this notification is attached to.</description>
    <label>Group</label>
    <referenceTo>NotificationGroup__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>