notification-engine/main/default/objects/Notification__c/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <inlineHelpText>The custom notification Developer name created in Salesforce.</inlineHelpText>
    <label>Notification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotificationType</valueSetName>
    </valueSet>
</CustomField>