notification-engine/main/default/objects/Notification__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Set the priority for this notification. Lesser the number higher the priority. If two notifications/groups have same priority, the one created earlier is given priority.</inlineHelpText>
    <label>Priority</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>