notification-engine/main/default/objects/Notification__c/fields/TargetId__c.field-meta.xml
<CustomField>
    <fullName>TargetId__c</fullName>
    <defaultValue>&apos;000000000000000AAA&apos;</defaultValue>
    <inlineHelpText>This field is ignored if a notification is grouped. Target Id of the record where to send the user after clicking page. You can either provide this or
        the target page reference value.</inlineHelpText>
    <label>Target Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>