notification-engine/main/default/objects/Notification__c/fields/TargetReference__c.field-meta.xml
<CustomField>
    <fullName>TargetReference__c</fullName>
    <inlineHelpText>This field is ignored if a notification is grouped.Target page reference where to send the user
        after clicking page. You can either provide this or the target Id value.</inlineHelpText>
    <label>Target Page reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>