notification-engine/main/default/objects/Notification__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Write the title of the notification. This field support merge fields for user object. Example: {!User.Field__c} messages with values larger than 250 characters will be truncated.</description>
    <externalId>true</externalId>
    <inlineHelpText>Write the title of the notification. This field support merge fields for user object. Example: {!User.Field__c} messages with values larger than 250 characters will be truncated.</inlineHelpText>
    <label>Title</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>