notification-engine/main/default/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <columns>NotificationType__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>